--- a/frontend/src/app/[locale]/globals.css
+++ b/frontend/src/app/[locale]/globals.css
@@ -4,6 +4,14 @@
 
 
 body{
-    @apply bg-slate-50 text-teal-950
+    @apply transition-theme bg-slate-50 text-teal-950
     dark:bg-slate-950 dark:text-slate-50
+}
+
+.transition-theme {
+    transition: all 0.19s ease-in-out;
+}
+
+.transition-icon {
+    transition: all 0.5s ease-in-out;
 }
